--- a/css/app.css
+++ b/css/app.css
@@ -41,6 +41,7 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -141,6 +142,8 @@ body {
 }
 
 .container {
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
   transition: all 0.5s;
 }
 @media only screen and (max-width: 425px) {
@@ -273,10 +276,15 @@ body {
   padding: 15px;
   border: none !important;
   cursor: pointer;
+  -webkit-transform-origin: center center;
+  -ms-transform-origin: center center;
   transform-origin: center center;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
   transition: all 0.5s;
   margin-bottom: 20px;
   border-radius: 1px;
+  -webkit-box-shadow: 0px 0px 10px #e3e3e3, 0px 0px 10px #e3e3e3;
   box-shadow: 0px 0px 10px #e3e3e3, 0px 0px 10px #e3e3e3;
 }
 @media only screen and (min-width: 425px) {
@@ -298,6 +306,7 @@ body {
   .cus_card {
     height: 120px;
     display: grid;
+    -ms-flex-line-pack: center;
     align-content: center;
   }
 }
@@ -320,11 +329,16 @@ body {
   }
 }
 .cus_card:hover {
+  -webkit-box-shadow: 1px 1px 4px #c8c8c8, -1px -1px 4px #c8c8c8;
   box-shadow: 1px 1px 4px #c8c8c8, -1px -1px 4px #c8c8c8;
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
   transform: scale(1.05);
 }
 @media only screen and (min-width: 992px) {
   .cus_card:hover {
+    -webkit-transform: scale(1.025);
+    -ms-transform: scale(1.025);
     transform: scale(1.025);
   }
 }
@@ -664,6 +678,9 @@ body {
 }
 @media only screen and (min-width: 425px) {
   .text__buttons {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row wrap;
     flex-flow: row wrap;
   }
 }
@@ -705,14 +722,25 @@ body {
 }
 @media only screen and (min-width: 576px) {
   .text__buttons .text_btn_wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row wrap;
     flex-flow: row wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
 }
 @media only screen and (min-width: 992px) {
   .text__buttons .text_btn_wrap {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
   }
 }
@@ -867,6 +895,7 @@ h6 {
   border-color: transparent !important;
 }
 .navbar .navbar-toggler:focus {
+  -webkit-box-shadow: none !important;
   box-shadow: none !important;
 }
 .navbar .navbar-toggler .navbar-icon img {
@@ -922,6 +951,8 @@ h6 {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: flex-start;
     margin-top: 45px;
     padding-bottom: 50px !important;
@@ -977,6 +1008,7 @@ h6 {
 main #mainContainer .email__form input,
 main #mainContainer .email__form button {
   width: 100%;
+  -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
   border: none !important;
   border-radius: 0 !important;
@@ -984,12 +1016,14 @@ main #mainContainer .email__form button {
 @media only screen and (min-width: 1400px) {
   main #mainContainer .email__form input,
 main #mainContainer .email__form button {
+    -ms-flex-preferred-size: 45%;
     flex-basis: 45%;
   }
 }
 @media only screen and (min-width: 1800px) {
   main #mainContainer .email__form input,
 main #mainContainer .email__form button {
+    -ms-flex-preferred-size: 35%;
     flex-basis: 35%;
   }
 }
@@ -1046,6 +1080,7 @@ main #mainContainer .email__form input {
 @media only screen and (min-width: 1400px) {
   main #mainContainer .email__form input {
     padding: 17px !important;
+    -ms-flex-preferred-size: 65%;
     flex-basis: 65%;
   }
 }
@@ -1142,6 +1177,7 @@ main #mainContainer .card__element {
   main #mainContainer .card__element {
     width: 200px;
     padding-top: 30px;
+    padding-right: 0px;
   }
 }
 @media only screen and (min-width: 1400px) {
@@ -1488,6 +1524,7 @@ main #mainContainer .card__element:nth-child(4) {
     display: grid;
   }
   #minimizeDowntime .container .quotes .quotes_owner {
+    -ms-flex-item-align: end;
     align-self: flex-end;
   }
 }
@@ -1529,12 +1566,20 @@ main #mainContainer .card__element:nth-child(4) {
   .btn_description_container .left_section .text__buttons {
     height: 55%;
     margin-top: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column wrap;
     flex-flow: column wrap;
   }
 }
 .btn_description_container .left_section .text__buttons .img_container {
+  -webkit-box-shadow: -3px -3px 10px #c8c8c8, 3px 3px 10px #c8c8c8;
   box-shadow: -3px -3px 10px #c8c8c8, 3px 3px 10px #c8c8c8;
 }
 .btn_description_container .right_section {
@@ -1542,8 +1587,15 @@ main #mainContainer .card__element:nth-child(4) {
 }
 @media only screen and (min-width: 992px) {
   .btn_description_container .right_section {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column wrap;
     flex-flow: column wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
   }
 }
@@ -1601,7 +1653,12 @@ main #mainContainer .card__element:nth-child(4) {
 }
 
 .visual_card_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column wrap;
   flex-flow: column wrap;
 }
 @media only screen and (min-width: 576px) {
@@ -1609,6 +1666,12 @@ main #mainContainer .card__element:nth-child(4) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto repeat(2, 1fr);
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .visual_card_list {
+    grid-template-columns: repeat(3, 1fr) repeat(3, 1.33fr) !important;
+    grid-template-rows: repeat(2, 1fr);
   }
 }
 .visual_card_list .visual_card {
@@ -1638,6 +1701,11 @@ main #mainContainer .card__element:nth-child(4) {
     padding: 75px 10px 75px 55px;
   }
 }
+@media only screen and (min-width: 1200px) {
+  .visual_card_list .visual_card {
+    padding: 25px 0px 25px 25px !important;
+  }
+}
 .visual_card_list .visual_card .icon_wrap {
   text-align: center;
 }
@@ -1714,8 +1782,14 @@ main #mainContainer .card__element:nth-child(4) {
 }
 @media only screen and (min-width: 992px) {
   .visual_card_list {
-    grid-template-columns: repeat(4, 1fr) repeat(4, 1.25fr);
+    grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(2, 1fr);
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .visual_card_list {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 1fr 1fr;
   }
 }
 .visual_card_list .visual_card {
@@ -1743,8 +1817,15 @@ main #mainContainer .card__element:nth-child(4) {
 @media only screen and (min-width: 992px) {
   .visual_card_list .visual_card {
     padding: 25px 5px 25px 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column wrap;
     flex-flow: column wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
 }
@@ -1762,6 +1843,11 @@ main #mainContainer .card__element:nth-child(4) {
 @media only screen and (min-width: 576px) {
   .visual_card_list .visual_card .icon_wrap img {
     width: 25px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .visual_card_list .visual_card .icon_wrap img {
+    width: 20px;
   }
 }
 .visual_card_list .visual_card h1.tittle {
@@ -1784,6 +1870,11 @@ main #mainContainer .card__element:nth-child(4) {
 @media only screen and (min-width: 576px) {
   .visual_card_list .visual_card h1.tittle {
     text-align: left;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .visual_card_list .visual_card h1.tittle {
+    font-size: 15px;
   }
 }
 .visual_card_list .visual_card .para {
@@ -1810,6 +1901,11 @@ main #mainContainer .card__element:nth-child(4) {
     text-align: left;
   }
 }
+@media only screen and (min-width: 1200px) {
+  .visual_card_list .visual_card .para {
+    font-size: 14px;
+  }
+}
 @media only screen and (min-width: 576px) {
   .visual_card_list .visual_card .para span {
     display: block;
@@ -1822,12 +1918,6 @@ main #mainContainer .card__element:nth-child(4) {
   }
 }
 @media only screen and (min-width: 576px) {
-  .visual_card_list .trash {
-    grid-column: 1/2;
-    grid-row: 2/3;
-  }
-}
-@media only screen and (min-width: 576px) {
   .visual_card_list .call {
     grid-column: 2/3;
     grid-row: -1/-2;
@@ -1838,6 +1928,18 @@ main #mainContainer .card__element:nth-child(4) {
     grid-column: 2/3;
     grid-row: 2/3;
     border: none !important;
+    background-color: white !important;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .visual_card_list .expand {
+    grid-column: -2/-1;
+    grid-row: 1/2;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .visual_card_list .expand img {
+    width: 18px;
   }
 }
 @media only screen and (min-width: 576px) {
@@ -1848,7 +1950,13 @@ main #mainContainer .card__element:nth-child(4) {
 }
 @media only screen and (min-width: 992px) {
   .visual_card_list .trash {
-    grid-column: 5/7;
+    grid-column: 3/5;
+    grid-row: 1/2;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .visual_card_list .trash {
+    grid-column: 4/5;
     grid-row: 1/2;
   }
 }
@@ -1860,8 +1968,14 @@ main #mainContainer .card__element:nth-child(4) {
 }
 @media only screen and (min-width: 992px) {
   .visual_card_list .call {
-    grid-column: 6/8;
+    grid-column: 5/7;
     grid-row: -1/-2;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .visual_card_list .call {
+    grid-column: 5/6;
+    grid-row: 2/3;
   }
 }
 @media only screen and (min-width: 576px) {
@@ -1874,6 +1988,12 @@ main #mainContainer .card__element:nth-child(4) {
 @media only screen and (min-width: 992px) {
   .visual_card_list .expand {
     grid-column: 7/9;
+    grid-row: 1/2;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .visual_card_list .expand {
+    grid-column: -2/-1;
     grid-row: 1/2;
   }
 }
@@ -1912,6 +2032,18 @@ main #mainContainer .card__element:nth-child(4) {
     padding-bottom: 35px;
   }
 }
+@media only screen and (min-width: 992px) {
+  .visual_card_list .shaveOffSection {
+    grid-row: -2/-1;
+    grid-column: 1/6;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .visual_card_list .shaveOffSection {
+    grid-row: 1/3;
+    grid-column: 1/4;
+  }
+}
 .visual_card_list .shaveOffSection .tittle {
   font-size: 16.5px;
   line-height: 110%;
@@ -1931,72 +2063,31 @@ main #mainContainer .card__element:nth-child(4) {
     font-size: 30px;
   }
 }
-.visual_card_list .shaveOffSection .tittle span {
-  display: block;
-}
-
-.shaveOffSection {
-  width: 100%;
-  background-color: white;
-}
-@media only screen and (min-width: 576px) {
-  .shaveOffSection {
-    grid-row: 1/2;
-    grid-column: 1/-1;
-    padding-top: 35px;
-    padding-bottom: 35px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .shaveOffSection {
-    grid-row: -2/-1;
-    grid-column: 1/6;
-  }
-}
-.shaveOffSection .tittle {
-  font-size: 16.5px;
-  line-height: 110%;
-}
-@media only screen and (min-width: 576px) {
-  .shaveOffSection .tittle {
-    font-size: 16px;
-  }
-}
-@media only screen and (min-width: 576px) and (min-width: 576px) {
-  .shaveOffSection .tittle {
-    font-size: calc( 16px + 14 * ( (100vw - 576px) / 416 ) );
-  }
-}
-@media only screen and (min-width: 576px) and (min-width: 992px) {
-  .shaveOffSection .tittle {
-    font-size: 30px;
-  }
-}
 @media only screen and (min-width: 1200px) {
-  .shaveOffSection .tittle {
+  .visual_card_list .shaveOffSection .tittle {
     font-size: 35px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  .shaveOffSection .tittle {
+  .visual_card_list .shaveOffSection .tittle {
     font-size: 42px;
   }
 }
 @media only screen and (min-width: 1800px) {
-  .shaveOffSection .tittle {
+  .visual_card_list .shaveOffSection .tittle {
     font-size: 53px;
   }
 }
-.shaveOffSection .tittle span {
+.visual_card_list .shaveOffSection .tittle span {
   display: block;
 }
 @media only screen and (min-width: 992px) {
-  .shaveOffSection .tittle span {
+  .visual_card_list .shaveOffSection .tittle span {
     display: block;
   }
 }
 @media only screen and (min-width: 992px) {
-  .shaveOffSection .cus__btn, .shaveOffSection .strategy_btn {
+  .visual_card_list .shaveOffSection .cus__btn, .visual_card_list .shaveOffSection .strategy_btn {
     width: 210px;
   }
 }
