--- a/scss/app.scss
+++ b/scss/app.scss
@@ -4,7 +4,8 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 // color code
@@ -158,6 +159,8 @@ body {
 }
 // container modification
 .container {
+    -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
     transition: all 0.5s;
     @include mxResp($xs) {
         padding-left: 20px !important;
@@ -251,11 +254,16 @@ body {
     padding: 15px;
     border: none !important;
     cursor: pointer;
-    transform-origin: center center;
+    -webkit-transform-origin: center center;
+        -ms-transform-origin: center center;
+            transform-origin: center center;
+    -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
     transition: all 0.5s;
     margin-bottom: 20px;
     border-radius: 1px;
-    box-shadow: 0px 0px 10px #e3e3e3, 0px 0px 10px #e3e3e3;
+    -webkit-box-shadow: 0px 0px 10px #e3e3e3, 0px 0px 10px #e3e3e3;
+            box-shadow: 0px 0px 10px #e3e3e3, 0px 0px 10px #e3e3e3;
     @include resp($xs) {
         padding: 22px;
     }
@@ -268,7 +276,8 @@ body {
     @include resp($lg) {
         height: 120px;
         display: grid;
-        align-content: center;
+        -ms-flex-line-pack: center;
+            align-content: center;
     }
     @include resp($xl) {
         margin-bottom: 25px;
@@ -284,10 +293,15 @@ body {
     }
 
     &:hover {
-        box-shadow: 1px 1px 4px #c8c8c8, -1px -1px 4px #c8c8c8;
-        transform: scale(1.05);
+        -webkit-box-shadow: 1px 1px 4px #c8c8c8, -1px -1px 4px #c8c8c8;
+                box-shadow: 1px 1px 4px #c8c8c8, -1px -1px 4px #c8c8c8;
+        -webkit-transform: scale(1.05);
+            -ms-transform: scale(1.05);
+                transform: scale(1.05);
         @include resp($lg) {
-            transform: scale(1.025);
+            -webkit-transform: scale(1.025);
+                -ms-transform: scale(1.025);
+                    transform: scale(1.025);
         }
     }
     h5 {
@@ -485,7 +499,7 @@ body {
     }
 }
 
-// small section heading 
+// small section heading
 .small_section_heading {
     @extend .semiBold;
     color: $blue;
@@ -499,7 +513,10 @@ body {
 .text__buttons {
     margin-top: 10px;
     @include resp($xs) {
-        flex-flow: row wrap;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-flow: row wrap;
+                flex-flow: row wrap;
     }
     // button text medium
     .btn_txt_medium {
@@ -522,13 +539,24 @@ body {
     // text and btn wrapper
     .text_btn_wrap {
         @include resp($sm) {
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            flex-flow: row wrap;
-            justify-content: space-between;
-            align-items: center;
+            -webkit-box-orient: horizontal;
+            -webkit-box-direction: normal;
+                -ms-flex-flow: row wrap;
+                    flex-flow: row wrap;
+            -webkit-box-pack: justify;
+                -ms-flex-pack: justify;
+                    justify-content: space-between;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
         }
-        @include resp ($lg) {
-            justify-content: flex-start;
+        @include resp($lg) {
+            -webkit-box-pack: start;
+                -ms-flex-pack: start;
+                    justify-content: flex-start;
         }
         // texts
         .texts {
@@ -541,7 +569,6 @@ body {
             }
         }
     }
-    
 }
 
 // button and description container design
@@ -657,7 +684,8 @@ h6 {
         border-color: transparent !important;
         // focus
         &:focus {
-            box-shadow: none !important;
+            -webkit-box-shadow: none !important;
+                    box-shadow: none !important;
         }
         .navbar-icon {
             img {
@@ -700,7 +728,9 @@ main {
             display: grid;
             grid-template-columns: repeat(6, 1fr);
             grid-template-rows: repeat(6, 1fr);
-            align-items: flex-start;
+            -webkit-box-align: start;
+                -ms-flex-align: start;
+                    align-items: flex-start;
             margin-top: 45px;
             padding-bottom: 50px !important;
         }
@@ -744,14 +774,17 @@ main {
             input,
             button {
                 width: 100%;
-                flex-basis: 100%;
+                -ms-flex-preferred-size: 100%;
+                    flex-basis: 100%;
                 border: none !important;
                 border-radius: 0 !important;
                 @include resp($xxl) {
-                    flex-basis: 45%;
+                    -ms-flex-preferred-size: 45%;
+                        flex-basis: 45%;
                 }
                 @include resp($mxl) {
-                    flex-basis: 35%;
+                    -ms-flex-preferred-size: 35%;
+                        flex-basis: 35%;
                 }
             }
             // input
@@ -775,7 +808,8 @@ main {
                 }
                 @include resp($xxl) {
                     padding: 17px !important;
-                    flex-basis: 65%;
+                    -ms-flex-preferred-size: 65%;
+                        flex-basis: 65%;
                 }
                 @include resp($mxl) {
                     padding: 20px !important;
@@ -854,6 +888,7 @@ main {
             @include resp($xl) {
                 width: 200px;
                 padding-top: 30px;
+                padding-right: 0px;
             }
             @include resp($xxl) {
                 padding-top: 35px;
@@ -1105,7 +1140,8 @@ main {
                 grid-column: 1/6;
                 display: grid;
                 .quotes_owner {
-                    align-self: flex-end;
+                    -ms-flex-item-align: end;
+                        align-self: flex-end;
                 }
             }
             .texts {
@@ -1163,13 +1199,21 @@ main {
             @include resp($lg) {
                 height: 55%;
                 margin-top: 0px;
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                justify-content: space-between;
-                flex-flow: column wrap;
+                -webkit-box-pack: justify;
+                    -ms-flex-pack: justify;
+                        justify-content: space-between;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                    -ms-flex-flow: column wrap;
+                        flex-flow: column wrap;
             }
-            // sample image 
+            // sample image
             .img_container {
-                box-shadow: -3px -3px 10px #c8c8c8, 3px 3px 10px #c8c8c8;
+                -webkit-box-shadow: -3px -3px 10px #c8c8c8, 3px 3px 10px #c8c8c8;
+                        box-shadow: -3px -3px 10px #c8c8c8, 3px 3px 10px #c8c8c8;
             }
         }
     }
@@ -1177,9 +1221,16 @@ main {
     .right_section {
         display: none;
         @include resp($lg) {
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            flex-flow: column wrap;
-            justify-content: space-between;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-flow: column wrap;
+                    flex-flow: column wrap;
+            -webkit-box-pack: justify;
+                -ms-flex-pack: justify;
+                    justify-content: space-between;
         }
         // image wrap
         .img_wrap {
@@ -1190,12 +1241,12 @@ main {
         // texts
         .para {
             font-size: 16.5px;
-            @include resp ($lg) {
+            @include resp($lg) {
                 font-size: 17px;
             }
         }
 
-        // rejoan 
+        // rejoan
         // image container
         .content_img {
             img {
@@ -1204,49 +1255,56 @@ main {
         }
     }
 }
-// more then maintence ------------------------------------- 
+// more then maintence -------------------------------------
 #moreThenMaintence {
-    // main heading 
+    // main heading
     .main_heading {
-        // section heading 
+        // section heading
         .section_heading {
             font-size: 19px;
-            @include fSmallToLarge(19px, 44px)
+            @include fSmallToLarge(19px, 44px);
         }
-        // section description 
+        // section description
         .section_description {
             span {
                 display: block;
                 @include fSmallToLarge(17px, 29px);
-                @include resp ($md) {
+                @include resp($md) {
                     display: inline-block;
                 }
             }
         }
-    } 
+    }
 }
 
-
-// virtual card list 
+// virtual card list
 .visual_card_list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column wrap;
-    // card decoration 
-    @include resp ($sm) {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+    // card decoration
+    @include resp($sm) {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto repeat(2, 1fr);
     }
-    
-    // visual card 
+    @include resp($xl) {
+        grid-template-columns: repeat(3, 1fr) repeat(3, 1.33fr)!important;
+        grid-template-rows: repeat(2, 1fr);
+    }
+    // visual card
     .visual_card {
         margin-bottom: 20px;
         padding: 25px 18px;
         border-radius: 15px;
-        @include resp ($xs) {
+        @include resp($xs) {
             padding: 40px 50px;
         }
-        @include resp ($sm) {
+        @include resp($sm) {
             border-radius: 0px;
             margin-bottom: 0px;
             padding: 45px 10px 45px 35px;
@@ -1254,32 +1312,35 @@ main {
         @include resp($md) {
             padding: 65px 10px 65px 45px;
         }
-        @include resp ($lg) {
+        @include resp($lg) {
             padding: 75px 10px 75px 55px;
         }
-        // card icon 
+        @include resp ($xl) {
+            padding: 25px 0px 25px 25px!important;
+        }
+        // card icon
         .icon_wrap {
             text-align: center;
-            @include resp ($sm) {
+            @include resp($sm) {
                 text-align: left;
             }
             img {
                 width: 22px;
-                @include resp ($sm) {
+                @include resp($sm) {
                     width: 25px;
                 }
             }
         }
-        // tittle 
+        // tittle
         h1.tittle {
             @include fSmallToLarge(16px, 19px);
             text-align: center;
             margin-top: 10px;
-            @include resp ($sm) {
+            @include resp($sm) {
                 text-align: left;
             }
         }
-        // para 
+        // para
         .para {
             @extend .regular;
             text-align: center;
@@ -1291,32 +1352,34 @@ main {
                 text-align: left;
             }
             span {
-                @include resp ($sm) {
+                @include resp($sm) {
                     display: block;
                 }
             }
         }
     }
-    @include resp ($sm) {
+    @include resp($sm) {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto repeat(2, 1fr);
     }
     @include resp($lg) {
-        grid-template-columns: repeat(4, 1fr) repeat(4, 1.25fr);
+        grid-template-columns: repeat(8, 1fr);
         grid-template-rows: repeat(2, 1fr);
     }
-    
-    
-    // visual card 
+    @include resp($xl) {
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 1fr 1fr;
+    }
+    // visual card
     .visual_card {
         margin-bottom: 20px;
         padding: 25px 18px;
         border-radius: 15px;
-        @include resp ($xs) {
+        @include resp($xs) {
             padding: 40px 50px;
         }
-        @include resp ($sm) {
+        @include resp($sm) {
             border-radius: 0px;
             margin-bottom: 0px;
             padding: 45px 10px 45px 35px;
@@ -1324,35 +1387,48 @@ main {
         @include resp($md) {
             padding: 65px 10px 65px 45px;
         }
-        @include resp ($lg) {
+        @include resp($lg) {
             padding: 25px 5px 25px 50px;
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            flex-flow: column wrap;
-            justify-content: center;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-flow: column wrap;
+                    flex-flow: column wrap;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
         }
-        // card icon 
+        // card icon
         .icon_wrap {
             text-align: center;
-            @include resp ($sm) {
+            @include resp($sm) {
                 text-align: left;
             }
             img {
                 width: 22px;
-                @include resp ($sm) {
+                @include resp($sm) {
                     width: 25px;
+                }
+                @include resp ($xl) {
+                    width: 20px;
                 }
             }
         }
-        // tittle 
+        // tittle
         h1.tittle {
             @include fSmallToLarge(16px, 19px);
             text-align: center;
             margin-top: 10px;
-            @include resp ($sm) {
+            @include resp($sm) {
                 text-align: left;
             }
+            @include resp ($xl) {
+                font-size: 15px;
+            }
         }
-        // para 
+        // para
         .para {
             @extend .regular;
             text-align: center;
@@ -1363,100 +1439,116 @@ main {
             @include resp($sm) {
                 text-align: left;
             }
+            @include resp ($xl) {
+                font-size: 14px;
+            }
             span {
-                @include resp ($sm) {
+                @include resp($sm) {
                     display: block;
                 }
             }
         }
     }
-    // different style for different card 
-    // shave card 
+    // different style for different card
+    // shave card
     .shaveCard {
-        @include resp ($sm) {
-
+        @include resp($sm) {
             grid-column: 1/3;
             grid-row: 1/2;
         }
     }
 
-    // trash card 
-    .trash {
-        @include resp($sm) {
-            grid-column: 1/2;
-            grid-row: 2/3;
-        }
-    }
-
-    // call card 
+    // call card
     .call {
         @include resp($sm) {
-            grid-column: 2/3;    
+            grid-column: 2/3;
             grid-row: -1/-2;
         }
     }
-    // expand card 
+    // expand card
     .expand {
-        @include resp ($sm) {
+        @include resp($sm) {
             grid-column: 2/3;
             grid-row: 2/3;
-            border: none!important;
+            border: none !important;
+            background-color: white !important;
         }
+        @include resp($xl) {
+            grid-column: -2/-1;
+            grid-row: 1/2;
+        }
+
+        img {
+            @include resp ($xl) {
+                width: 18px;
+            }
+        }
+
     }
+    // trash card
     .trash {
         @include resp($sm) {
             grid-column: 1/2;
             grid-row: 2/3;
         }
         @include resp($lg) {
-            grid-column: 5/7;
+            grid-column: 3/5;
+            grid-row: 1/2;
+        }
+        @include resp($xl) {
+            grid-column: 4/5;
             grid-row: 1/2;
         }
     }
-
-    // call card 
+    // call card
     .call {
         @include resp($sm) {
-            grid-column: 2/3;    
+            grid-column: 2/3;
             grid-row: -1/-2;
         }
         @include resp($lg) {
-            grid-column: 6/8;
+            grid-column: 5/7;
             grid-row: -1/-2;
         }
+        @include resp($xl) {
+            grid-column: 5/6;
+            grid-row: 2/3;
+        }
     }
-    // expand card 
+    // expand card
     .expand {
-        @include resp ($sm) {
+        @include resp($sm) {
             grid-column: 2/3;
             grid-row: 2/3;
-            border: none!important;
+            border: none !important;
         }
         @include resp($lg) {
             grid-column: 7/9;
             grid-row: 1/2;
         }
+        @include resp($xl) {
+            grid-column: -2/-1;
+            grid-row: 1/2;
+        }
     }
-
-
-    // logo card 
+    // logo card
     .logoCard {
-        @include resp ($sm) {
+        @include resp($sm) {
             grid-column: 1/2;
             grid-row: -1/-2;
         }
         .icon_wrap {
-            // img 
+            // img
             img {
                 width: 26px;
-                @include resp ($md) {
+                @include resp($md) {
                     width: 30px;
                 }
-                @include resp ($lg) {
+                @include resp($lg) {
                     width: 34px;
                 }
             }
-            // description 
+            // description
             .des {
                 span {
                     @extend .semiBold;
@@ -1466,48 +1558,31 @@ main {
             }
         }
     }
-    // shave of tittle
+    // shave offf card
     .shaveOffSection {
         width: 100%;
         background-color: white;
-        @include resp ($sm) {
+        @include resp($sm) {
             grid-row: 1/2;
             grid-column: 1/-1;
             padding-top: 35px;
             padding-bottom: 35px;
         }
-        .tittle {
-            font-size: 16.5px;
-            line-height: 110%;
-            @include resp ($sm) {
-                @include font-size($sm, $lg, 16px, 30px);
-            }
-            span {
-                display: block;
-            }
-        }
-    }
-}
-    .shaveOffSection {
-        width: 100%;
-        background-color: white;
-        @include resp ($sm) {
-            grid-row: 1/2;
-            grid-column: 1/-1;
-            padding-top: 35px;
-            padding-bottom: 35px;
-        }
-        @include resp ($lg) {
+        @include resp($lg) {
             grid-row: -2/-1;
             grid-column: 1/6;
         }
+        @include resp($xl) {
+            grid-row: 1/3;
+            grid-column: 1/4;
+        }
         .tittle {
             font-size: 16.5px;
             line-height: 110%;
-            @include resp ($sm) {
+            @include resp($sm) {
                 @include font-size($sm, $lg, 16px, 30px);
             }
-            @include resp ($xl) {
+            @include resp($xl) {
                 font-size: 35px;
             }
             @include resp($xxl) {
@@ -1523,12 +1598,12 @@ main {
                 }
             }
         }
-        // custom button 
+        // custom button
         .cus__btn {
-            @include resp ($lg) {
+            @include resp($lg) {
                 width: 210px;
             }
             // @include resp()
         }
     }
-
+}
